2024 Day 15 Part 1 cleanup and prep part 2